Sat May 14 20:49:59 2005  Tim Janik  <timj@gtk.org>

	* sfilog.h, sfilog.c:
	cleanups. API cleanups and consolidations. allow custom log bits.
	renamed message types from SFI_LOG_* to SFI_MSG_*. 

Thu May 12 00:07:51 2005  Tim Janik  <timj@gtk.org>

	* sfilog.h, sfilog.c: made log message much richer.
	messages now carry a title, a primary, a secondary message and
	details messages. added sfi_log_msg() and a set of log message
	formating macros SFI_MSG_*() to facilitate rich log messages.

Mon Apr 11 00:49:40 2005  Tim Janik  <timj@gtk.org>

	* sfi/sfiustore.c: fixed data pointer in sfi_ppool_foreach().

Mon Mar  7 07:32:03 2005  Tim Janik  <timj@gtk.org>

	* removed obsolete .h C++ headers.

	* adapted sources to compile against .hh C++ headers.

Thu Jan 20 17:51:25 2005  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]: removed position arguemtn from SfiStoreReadBin().
	it's the responsibility of the SfiStoreReadBin() implementation to
	provide consequtive data blocks now.

Thu Jan 20 17:31:01 2005  Tim Janik  <timj@gtk.org>

	* sfitime.c (sfi_time_from_string_err): parse dates without time
	specifications for yyyy-mm-dd, mm/dd/yyyy and dd.mm.yyyy.

Thu Jan 20 17:15:06 2005  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]:
	sfi_wstore_putf(): store floats locale independent.
	sfi_wstore_putd(): store doubles locale independent.
	sfi_wstore_printf(): issue warnings if the format string contains
	localised directives.

Thu Jan 20 15:18:11 2005  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc] (g_printf_find_localised_directive): detect 
	localised printf format directives.

Thu Jan 20 05:13:30 2005  Tim Janik  <timj@gtk.org>

	* sfistore.c (sfi_wstore_flush_fd): return negative errno
	in case of errors.

Thu Jan  6 18:50:27 2005  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]: added sfi_rstore_parse_zbinary() to parse binary
	block offset+length adresses zero mark relative.

Fri Dec 31 01:35:09 2004  Tim Janik  <timj@gtk.org>
