@@ -1,3 +1,7 @@
+Sun May 15 15:52:18 2005  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: compile toyprof conditionally.
+        
 Sat May 14 20:49:59 2005  Tim Janik  <timj@gtk.org>
 
 	* sfilog.h, sfilog.c:
